--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							<input type="email" placeholder="Email ID" name="EmailId" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
 						</div>
 						<div class="formbutton">
-							<button type="submit">Upload</button>
+							<input type="submit" value="Submit" id="submit">
 						</div>
 						</form>
 					</div>
