--- a/index.html
+++ b/index.html
@@ -97,19 +97,19 @@
 					<div class="modalinnr">
 						<form action="" name="contact-form" method="post" class="contact__form">
 						<div class="input">
-							<input type="text" placeholder="Name" name="Name" required>
+							<input type="text" placeholder="Name" name="name" required>
 						</div>
 						<div class="input">
-							<input type="tel" placeholder="Phone Number" name="Phone" required maxlength="10" minlength="10" pattern="\d{10,15}">
+							<input type="tel" placeholder="Phone Number" name="phone" required maxlength="10" minlength="10" pattern="\d{10,15}">
 						</div>
 						<div class="input">
-							<input type="text" placeholder="School Name" name="SchoolName" required>
+							<input type="text" placeholder="School Name" name="schoolName" required>
 						</div>
 						<div class="input">
-							<input type="text" placeholder="Role" name="Role" required>
+							<input type="text" placeholder="Role" name="role" required>
 						</div>
 						<div class="input">
-							<input type="email" placeholder="Email ID" name="EmailId" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+							<input type="email" placeholder="Email ID" name="emailId" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
 						</div>
 						<div class="formbutton">
 							<input type="submit" value="Submit" id="submit">
