--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
 							<input type="tel" placeholder="Phone Number" name="phone" required maxlength="10" minlength="10" pattern="\d{10,15}">
 						</div>
 						<div class="input">
-							<input type="text" placeholder="School Name" name="schoolName" required>
+							<input type="text" placeholder="School Name" name="schoolname" required>
 						</div>
 						<div class="input">
 							<input type="text" placeholder="Role" name="role" required>
 						</div>
 						<div class="input">
-							<input type="email" placeholder="Email ID" name="emailId" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+							<input type="email" placeholder="Email ID" name="emailid" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
 						</div>
 						<div class="formbutton">
 							<input type="submit" value="Submit" id="submit">
