--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 			<div class="headingBox">
 				<h2>A Glimpse into the Future</h2>
 			</div>
-			<div class="videos" style="display: none;">
-				<video id="video" width="100%" height="100%" preload="auto" controls="controls">
+			<div class="videos">
+				<video id="video" width="100%" height="100%" preload="auto" controls="controls" poster="images/videobg.png">
 					<source src="images/video.mp4">
 				</video>
 			</div>
