--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							</div>
 						</div>
 						<div class="buttonBox">
-							<a href="" class="btn" style="background-image: url(images/buttonbg.png);">Learn More</a>
+							<a href="" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Learn More</a>
 						</div>
 					</div>
 				</div>
@@ -70,7 +70,7 @@
 		<div class="container">
 			<div class="headingBox">
 				<div class="boxinnr">
-					<div class="buttonBox"><a href="javascript:;" class="btn" style="background-image: url(images/buttonbg.png);">Learn more</a></div>
+					<div class="buttonBox"><a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Learn more</a></div>
 					<ul class="sociallink">
 						<li>
 							<div class="linnr"><a href=""><img src="images/fb.png" alt="facebook"></a></div>
@@ -174,7 +174,7 @@
 				video.pause();
 			}
 		});
-		$(".learnsocial .btn").on('click', function() {
+		$(".formtarget").on('click', function() {
 			$('.popupscreen').show();
 		});
 	</script>
