--- a/index.html
+++ b/index.html
@@ -177,6 +177,14 @@
 		$(".formtarget").on('click', function() {
 			$('.popupscreen').show();
 		});
+		jQuery(document).ready(function($) {
+			// Hide .popupscreen when the Esc key is pressed
+			$(document).keydown(function(event) {
+				if (event.key === "Escape" || event.keyCode === 27) { // Check if the Esc key is pressed
+				$('.popupscreen').hide(); // Hide the element with class .popupscreen
+				}
+			});
+		});
 	</script>
 	<!-- https://docs.google.com/spreadsheets/d/1YFxYnwuMiQwf8Gv5Kr6KpSKxgv4OLsSpNuWa-eSzXKU/edit?gid=0#gid=0 google sheet -->
 	<script type="text/javascript">
