--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							</div>
 						</div>
 						<div class="buttonBox">
-							<a href="" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Learn More</a>
+							<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Learn More</a>
 						</div>
 					</div>
 				</div>
