--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
 					<div class="buttonBox"><a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Learn more</a></div>
 					<ul class="sociallink">
 						<li>
-							<div class="linnr"><a href=""><img src="images/fb.png" alt="facebook"></a></div>
+							<div class="linnr"><a href="https://www.facebook.com/leadschoolindia" target="_blank"><img src="images/fb.png" alt="facebook"></a></div>
 						</li>
 						<li>
-							<div class="linnr"><a href=""><img src="images/insta.png" alt="instagram"></a></div>
+							<div class="linnr"><a href=" https://www.instagram.com/leadschoolindia?igsh=b2htdWJ4eTQ4bjl3" target="_blank"><img src="images/insta.png" alt="instagram"></a></div>
 						</li>
 						<li>
-							<div class="linnr"><a href=""><img src="images/tw.png" alt="twitter"></a></div>
+							<div class="linnr"><a href="https://x.com/leadgroupindia?t=2F-AJYxA7W80hRzh6WOuOA&s=09" target="_blank"><img src="images/tw.png" alt="twitter"></a></div>
 						</li>
 						<li>
-							<div class="linnr"><a href=""><img src="images/li.png" alt="linkedin"></a></div>
+							<div class="linnr"><a href="https://www.linkedin.com/school/leadgroupindia/" target="_blank"><img src="images/li.png" alt="linkedin"></a></div>
 						</li>
 					</ul>
 				</div>
