--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			</div>
 			<div class="videos">
 				<video id="video" width="100%" height="100%" preload="auto" controls="controls" poster="images/videobg.png">
-					<source src="images/video.mp4">
+					<source src="images/videos.mp4">
 				</video>
 			</div>
 		</div>
