--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<div class="input">
 							<!-- <input type="text" placeholder="Role" name="role" required> -->
 							 <Select name="role">
-								<option disabled>Select</option>
+								<option>-Select-</option>
 								<option value="Admin">Admin</option>
 								<option value="Developer">Developer</option>
 								<option value="Teacher">Teacher</option>
