--- a/index.html
+++ b/index.html
@@ -90,7 +90,13 @@
 		</div>
 	 </section>
 	<!-- Learn more Social Link End -->
-	 <div class="popupscreen" style="background-color: #000b16; display: none;">
+	 <div class="popupscreen" style="background-color: #000b16; display: none;">		
+		<div class="button close">
+			<svg xmlns="http://www.w3.org/2000/svg" width="18" height="23" viewBox="0 0 24 23" fill="none">
+				<line x1="1.70711" y1="1.29289" x2="22.7071" y2="22.2929" stroke="white" stroke-width="2"/>
+				<line x1="1.29289" y1="22.2929" x2="22.2929" y2="1.29289" stroke="white" stroke-width="2"/>
+			</svg>
+		</div>
 		<div class="container">
 			<div class="modalpopupinnr">
 				<div class="modalform" style="background-image: url(images/formbg.png); display: block;">
