--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
 							<!-- <input type="text" placeholder="Role" name="role" required> -->
 							 <Select name="role">
 								<option>-Select-</option>
-								<option value="Admin">Admin</option>
-								<option value="Developer">Developer</option>
+								<option value="School Owner/Management">School Owner/Management</option>
+								<option value="Principal">Principal</option>
 								<option value="Teacher">Teacher</option>
+								<option value="Other">Other</option>
 							 </Select>
 						</div>
 						<div class="input">
