--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
 				<h2>A Glimpse into the Future</h2>
 			</div>
 			<div class="videos">
-				<video id="video" width="100%" height="100%" preload="auto" controls="controls" poster="images/videobg.png">
+				<video id="video" class="desktop" width="100%" height="100%" preload="auto" controls="controls" poster="images/videobg.png">
+					<source src="images/videos.mp4">
+				</video>
+				<video id="video" class="mobile" width="100%" height="100%" preload="auto" controls="controls" poster="images/videobg.png" style="display: none;">
 					<source src="images/videos.mp4">
 				</video>
 			</div>
