--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<video id="video" class="desktop" width="100%" height="100%" preload="auto" controls="controls" poster="images/videobg.png">
 					<source src="images/videos.mp4">
 				</video>
-				<video id="video" class="mobile" width="100%" height="100%" preload="auto" controls="controls" poster="images/videobg.png" style="display: none;">
+				<video id="video" class="mobile" width="100%" height="100%" preload="auto" controls="controls" playsinline poster="images/videobg.png" style="display: none;">
 					<source src="images/videos.mp4">
 				</video>
 			</div>
