--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -142,7 +142,7 @@
 	<!-- Main Banner End -->
 	 
 	<!-- Product Section Start -->
-	 <section class="productsection" style="background-image: url(images/background.png);">
+	 <section class="productsection bgstyle" style="background-image: url(images/background.png);">
 		<div class="container">
 			<div class="productblock">
 				<div class="productslider">
@@ -214,7 +214,7 @@
 	<!-- Product Section End -->
 
 	<!-- Curious to learn more? Start -->
-	 <section class="curiouslearnsec" style="background-image: url(images/background.png);">
+	 <section class="curiouslearnsec bgstyle" style="background-image: url(images/background.png);">
 		<div class="container">
 			<div class="row">
 				<div class="content">
@@ -229,7 +229,7 @@
 	<!-- Curious to learn more? End -->
 
 	<!-- Demo Request Form Start -->
-	 <section class="demorequestsec" style="background-image: url(images/background.png);">
+	 <section class="demorequestsec bgstyle" style="background-image: url(images/background.png);">
 		<div class="container">
 			<div class="row">
 				<div class="formdata">					
