--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -41,17 +41,12 @@
 	<!-- Main Banner Start -->
 	 <section class="mainbanner bgstyle" style="background-image: url(images/background.png);">
 		<div class="container">
-			<div class="bookthreeblock">
-				<div class="headingBox">
-					<h1>The Future of learning</h1>
-				</div>
-				<div class="row">
-					<div class="col-3">					
-						<div class="buttonBox">
-							<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">PRE-BOOK NOW</a>
-						</div>
-					</div>	
-					<div class="col-65">
+			<div class="blockbookjourney">
+				<div class="bookthreeblock" style="display: none;">
+					<div class="bookthreeblockinnr">
+						<div class="headingBox">
+							<h1>The intelligent books for the new-age schools</h1>
+						</div>				
 						<div class="threetechbook">
 							<ul>
 								<li>
@@ -64,77 +59,79 @@
 									<div class="techbook" data-book="greenbook"><img src="images/Green-Book-1.png" alt="Green-Book-1"></div>
 								</li>
 							</ul>
+						</div>								
+						<div class="buttonBox">
+							<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Requuest a 
+								Demo
+							</a>
 						</div>
-					</div>		
+					</div>
 				</div>
-			</div>
-			<div id="bluebook" class="middlebook bluebookactive" style="display: none;">
-				<ul>
-					<li>
-						<div class="bookpage"><img src="images/blurred.png" alt="Tech Book"></div>
-					</li>
-					<li>
-						<div class="bookpage blueactive"><img src="images/Blueactive.png" alt="Tech Book"></div>
-					</li>
-					<li>
-						<div class="bookpage"><img src="images/blurgreen.png" alt="Tech Book"></div>
-					</li>
-				</ul>
-			</div>
-			<div id="redbook" class="middlebook redbookactive" style="display: none;">
-				<ul>
-					<li>
-						<div class="bookpage"><img src="images/blurblue.png" alt="Tech Book"><a href="javascript:;" class="posurl"></a></div>
-					</li>
-					<li>
-						<div class="bookpage redactive"><img src="images/redactive.png" alt="Tech Book"><a href="javascript:;" class="posurl"></a></div>
-					</li>
-					<li>
-						<div class="bookpage"><img src="images/blurgreen.png" alt="Tech Book"><a href="javascript:;" class="posurl"></a></div>
-					</li>
-				</ul>
-			</div>
-			<div class="bookpdf" id="redbookpdf" style="display: none;">
-				<div class="bookpdfinnr">
-					<div class="bookpdfrow">
-						<div class="close"><img src="images/cross.png" alt="cross"></div>
-						<div class="bookslider">
-							<div class="slide">
-								<div class="slideinnr">
-									<img src="images/Open-Red-Book.png" alt="">
-									<div class="btnbox">
-										<a href="" class="btn">
-											see demo
-										</a>
+				<div id="bluebook" class="middlebook bluebookactive" style="display: none;">
+					<ul>
+						<li>
+							<div class="bookpage"><img src="images/blurred.png" alt="Tech Book"></div>
+						</li>
+						<li>
+							<div class="bookpage blueactive"><img src="images/Blueactive.png" alt="Tech Book"></div>
+						</li>
+						<li>
+							<div class="bookpage"><img src="images/blurgreen.png" alt="Tech Book"></div>
+						</li>
+					</ul>
+				</div>
+				<div id="redbook" class="middlebook redbookactive" style="display: none;">
+					<ul>
+						<li>
+							<div class="bookpage"><img src="images/blurblue.png" alt="Tech Book"><a href="javascript:;" class="posurl"></a></div>
+						</li>
+						<li>
+							<div class="bookpage redactive"><img src="images/redactive.png" alt="Tech Book"><a href="javascript:;" class="posurl"></a></div>
+						</li>
+						<li>
+							<div class="bookpage"><img src="images/blurgreen.png" alt="Tech Book"><a href="javascript:;" class="posurl"></a></div>
+						</li>
+					</ul>
+				</div>
+				<div class="bookpdf" id="redbookpdf" style="display: none;">
+					<div class="bookpdfinnr">
+						<div class="bookpdfrow">
+							<div class="close"><img src="images/cross.png" alt="cross"></div>
+							<div class="bookslider">
+								<div class="slide">
+									<div class="slideinnr">
+										<img src="images/Open-Red-Book.png" alt="">
+										<div class="btnbox">
+											<a href="" class="posurl">												
+											</a>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="bookpdf" id="bluebookpdf" style="display: none;">
-				<div class="bookpdfinnr">
-					<div class="bookpdfrow">
-						<div class="close"><img src="images/cross.png" alt="cross"></div>
-						<div class="bookslider">
-							<div class="slide">
-								<div class="slideinnr">
-									<img src="images/Open-Blue-Book.png" alt="">
-									<div class="btnbox">
-										<a href="" class="btn">
-											see demo
-										</a>
+				<div class="bookpdf" id="bluebookpdf" style="display: flex;">
+					<div class="bookpdfinnr">
+						<div class="bookpdfrow">
+							<div class="close"><img src="images/cross.png" alt="cross"></div>
+							<div class="bookslider">
+								<div class="slide">
+									<div class="slideinnr">
+										<img src="images/Open-Blue-Book.png" alt="">
+										<div class="btnbox">
+											<a href="" class="posurl">
+											</a>
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="slide">
-								<div class="slideinnr">
-									<img src="images/Open-Green-Book.png" alt="">
-									<div class="btnbox">
-										<a href="" class="btn">
-											see demo
-										</a>
+								<div class="slide">
+									<div class="slideinnr">
+										<img src="images/Open-Green-Book.png" alt="">
+										<div class="btnbox">
+											<a href="" class="posurl">
+											</a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -166,7 +163,7 @@
 										<li>-Theme based from self to world</li>
 									</ul>					
 									<div class="buttonBox">
-										<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Explore | PRE-order</a>
+										<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
 									</div>
 								</div>
 							</div>
@@ -183,7 +180,7 @@
 										<li>-Build essential skills</li>
 									</ul>					
 									<div class="buttonBox">
-										<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Explore | PRE-order</a>
+										<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
 									</div>
 								</div>
 							</div>
@@ -206,7 +203,7 @@
 										<li>-Build essential skills</li>
 									</ul>					
 									<div class="buttonBox">
-										<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Explore | PRE-order</a>
+										<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
 									</div>
 								</div>
 							</div>
@@ -223,9 +220,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="content">
-					<h2>Curious to learn more?</h2>				
+					<h2>Interested in bringing this to your schools?</h2>				
 					<div class="buttonBox">
-						<a href="javascript:;" class="btn" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
+						<a href="javascript:;" class="btn" style="background-image: url(images/buttonbg.png);">Join the Waitlist</a>
 					</div>
 				</div>
 			</div>
@@ -297,7 +294,8 @@
 			$(".productslider").slick({
 				slidesToShow: 1,
 				slidesToScroll: 1,
-				autoplay: false,
+				autoplay: true,
+				autoplaySpeed: 5000,
 				arrows: false,
 				dots: false,
 				pauseOnHover: false,
@@ -311,12 +309,13 @@
 				pauseOnHover: false,
 			});
 		});
-		
 		$(document).ready(function() {
 			// Handle click event on .techbook elements
 			$('.blueactive').click(function() {
 				$('#bluebookpdf').show();
 				$(".bluebookactive").hide();
+				$('.bookslider').slick('refresh');
+				$('.your-slider-class').slick('setPosition'); 
 				
 			});
 			$('.redactive').click(function() {
@@ -334,6 +333,7 @@
 				$('.bookpdf').hide();
 				$('.bookthreeblock').show();
 			});
+			
 
 		});
 	</script>
