--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -107,6 +107,11 @@
 										</div>
 									</div>
 								</div>
+							</div>							
+							<div class="buttonBox">
+								<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Request a 
+									Demo
+								</a>
 							</div>
 						</div>
 					</div>
@@ -135,6 +140,11 @@
 									</div>
 								</div>
 							</div>
+						</div>							
+						<div class="buttonBox">
+							<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Request a 
+								Demo
+							</a>
 						</div>
 					</div>
 				</div>
@@ -251,7 +261,7 @@
 						<div class="input">
 							<!-- <input type="text" placeholder="Role" name="role" required> -->
 								<Select name="role">
-								<option>-Select-</option>
+								<option>-Select Role-</option>
 								<option value="School Owner/Management">School Owner/Management</option>
 								<option value="Principal">Principal</option>
 								<option value="Teacher">Teacher</option>
