--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -56,7 +56,7 @@
 									<div class="techbook" data-book="redbook"><img src="images/Red-Book-1.png" alt="Red-Book-1"></div>
 								</li>
 								<li>
-									<div class="techbook" data-book="greenbook"><img src="images/Green-Book-1.png" alt="Green-Book-1"></div>
+									<div class="techbooks"><img src="images/Green-Book-1.png" alt="Green-Book-1"></div>
 								</li>
 							</ul>
 						</div>								
