--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -179,7 +179,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="productslide">
+					<div class="productslide columnreverse">
 						<div class="row">
 							<div class="col-5">
 								<div class="bookFeature">
