--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -61,7 +61,7 @@
 							</ul>
 						</div>								
 						<div class="buttonBox">
-							<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Request a 
+							<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a 
 								Demo
 							</a>
 						</div>
@@ -109,7 +109,7 @@
 								</div>
 							</div>							
 							<div class="buttonBox">
-								<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Request a 
+								<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a 
 									Demo
 								</a>
 							</div>
@@ -142,7 +142,7 @@
 							</div>
 						</div>							
 						<div class="buttonBox">
-							<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Request a 
+							<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a 
 								Demo
 							</a>
 						</div>
@@ -173,7 +173,7 @@
 										<li>-Theme based from self to world</li>
 									</ul>					
 									<div class="buttonBox">
-										<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
+										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
 									</div>
 								</div>
 							</div>
@@ -190,7 +190,7 @@
 										<li>-Build essential skills</li>
 									</ul>					
 									<div class="buttonBox">
-										<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
+										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
 									</div>
 								</div>
 							</div>
@@ -213,7 +213,7 @@
 										<li>-Build essential skills</li>
 									</ul>					
 									<div class="buttonBox">
-										<a href="javascript:;" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
+										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
 									</div>
 								</div>
 							</div>
@@ -318,6 +318,12 @@
 				scrollTop: $('#' + sectionToShow).offset().top
 			}, 500); // 500ms for smooth scroll
 		});
+		// Attach click event listener to all li elements within .menu
+		$('.requestaquote').click(function () {
+			$('html, body').animate({
+				scrollTop: $('#demorequestsec').offset().top
+			}, 500); // 500ms for smooth scroll
+		});
 	});
 
 		$(document).ready(function () {
@@ -367,7 +373,33 @@
 			
 
 		});
+		
 	</script>
+	<script type="text/javascript">
+		// https://docs.google.com/spreadsheets/d/13RjdPDjx-SmoYRjMFm0pdnfvUSmy2YZO7QXnJYBdNes/edit?gid=0#gid=0 sheet
+		const scriptURL = 'https://script.google.com/macros/s/AKfycbxMjL32hhMNgSVAmi9OiPPpmwKVbNsWelCtU3mP_TJOLbcxhpH97mXJWbAOVR2HR5XoOg/exec';
+		const form = document.forms['contact-form'];
+		form.addEventListener('submit', e => {
+		e.preventDefault();
+		fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+		.then(response => {
+			// Check if the response is successful
+			if (response.ok) {
+			// Show the .smgmsg div if the response is OK
+			document.querySelector('.sucessmsg').style.display = 'block';
+			document.querySelector('.modalform').style.display = 'none';
+			
+			// Optionally, clear the form after submission
+			form.reset();
+			} else {
+			// Handle other response scenarios if needed
+			console.error('Error:', response.statusText);
+			}
+		})
+		.catch(error => console.error('Error!', error.message));
+		});
+
+</script>
 	
 </body>
 </html>
