--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -276,7 +276,7 @@
 						</div>
 					</form>
 					<div class="sucessmsg" style="display: none;">
-						<p style="text-align: center;color: green;font-weight: 500;">Thanks for your Techbook demo request! We'll contact you soon to schedule.</p>
+						<p style="text-align: center;color: green;font-weight: 500;font-size: 1.9rem;">Thanks for your Techbook demo request! We'll contact you soon to schedule.</p>
 					</div>
 				</div>
 			</div>
