--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -45,7 +45,7 @@
 				<div class="bookthreeblock">
 					<div class="bookthreeblockinnr">
 						<div class="headingBox">
-							<h1>The intelligent books for the new-age schools</h1>
+							<h1>The INTELLIGENT BOOK FOR NEW-AGE SCHOOL</h1>
 						</div>				
 						<div class="threetechbook">
 							<ul>
@@ -166,11 +166,11 @@
 							<div class="col-5">
 								<div class="bookFeature">
 									<ul>
-										<li>-Builds Reading Fluency for every child with IRA</li>
-										<li>-Personalised Practice beyond the book with PIE</li>
-										<li>-Lexile Based Reading Levels</li>
-										<li>-Eclectic Mix of author</li>
-										<li>-Theme based from self to world</li>
+										<li>- Build reading fluency for every child with IRA										</li>
+										<li>- Personalised practice beyond the book with PIE</li>
+										<li>- ⁠Lexile-based reading levels</li>
+										<li>- ⁠An Eclectic mix of authors</li>
+										<li>- ⁠Theme-based, from self to world</li>
 									</ul>					
 									<div class="buttonBox">
 										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
@@ -184,10 +184,10 @@
 							<div class="col-5">
 								<div class="bookFeature">
 									<ul>
-										<li>-Concept come alive with ARI</li>
-										<li>-Personalised practice beyond the book with PIE</li>
-										<li>-Learn Science by Doing</li>
-										<li>-Build essential skills</li>
+										<li>- Concepts come alive with ARI</li>
+										<li>- Personalised practice beyond the book with PIE</li>
+										<li>- Learn MATH via concrete pictorial abstract methods</li>
+										<li>- I’m guessing these would be multiple</li>
 									</ul>					
 									<div class="buttonBox">
 										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
@@ -207,10 +207,8 @@
 							<div class="col-5">
 								<div class="bookFeature">
 									<ul>
-										<li>-Concept come alive with ARI </li>
-										<li>-Personalised Practice beyond the book with PIE</li>
-										<li>-Learn Math via Concrete Pictoral Abstract Method</li>
-										<li>-Build essential skills</li>
+										<li>- Concepts come alive with ARI</li>
+										<li>- Learn Science by doing</li>
 									</ul>					
 									<div class="buttonBox">
 										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
